# medical-ecg-image-to-signal-reconstruction-pipeline

./: .env.example  .gitattributes  .gitignore  .replit  CITATION.cff  Makefile  README.md  pyproject.toml  replit.md  requirements.txt
.github/workflows/: ci.yml
archive/: README.md
archive/checkpoints/: best_model_deeplab_ph10.pth  best_model_efficientnet_ph10.pth  checkpoint_effb3_phase9_ddp (1) (1).pt
archive/notebooks/: ecg-sim2real-datagenerator-mohamad-sabbagh (1).ipynb  ecg-sim2real-datagenerator-mohamad-sabbagh (10).ipynb  ecg-sim2real-datagenerator-mohamad-sabbagh (11).ipynb  ecg-sim2real-datagenerator-mohamad-sabbagh (12).ipynb  ecg-sim2real-datagenerator-mohamad-sabbagh (13).ipynb  ecg-sim2real-datagenerator-mohamad-sabbagh (14).ipynb  ecg-sim2real-datagenerator-mohamad-sabbagh (15).ipynb  (+48 more)
attached_assets/: Pasted-You-are-working-inside-the-repository-medical-ecg-image_1777745603987.txt
configs/: models.yaml  runtime.default.yaml  runtime.kaggle.reference.yaml
data/: README.md
models/: README.md  best.pt  best_model_effb3_phase9_ddp (2).pth  best_model_phase10.pth
reports/: quality_report.md  synthetic_score.json
results/: README.md
tests/: conftest.py  test_cli.py  test_config_loader.py  test_interfaces.py  test_io_paths.py  test_model_selector.py  test_pipeline_compat_adapter.py  test_pipeline_compat_asset_readiness.py  test_pipeline_compat_report.py  test_pipeline_compat_submission_conversion.py  test_quality_checks.py  test_research_pack_exists.py  test_synthetic_benchmark.py  test_synthetic_scoring.py  test_validation_and_export.py
(+209 files in other folders)
